added test cases (still need to improve)